<resources>
    <string name="app_name">NUMAD18S-ChenLiu</string>
    <string name="about_me">
        <b>Name: </b> Chen Liu \n<b>Email: </b> liu.chen7@husky.neu.edu \n<b>Year/Major: </b>  17-Fall-CS-Align
    </string>
    <string name="acknowledgement_text">
        Store the data into a hashmap, learnt how to store a hashmap to a file, reference: https://bukkit.org/threads/loading-and-storing-a-hashmap-to-a-file.89570/
        \n\
        Learnt how to make beeping, reference: https://stackoverflow.com/questions/12154940/how-to-make-a-beep-in-android
        \n\
        Learnt how to extract hashmap to a file, reference:https://stackoverflow.com/questions/12747946/how-to-write-and-read-a-file-with-a-hashmap.
        \n\
    </string>
    <string name="msg_subscribed">Subscribed to Scroggle topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="dic_act">Dictionary</string>
    <string name="gen_error">Generate Error</string>
    <string name="wordgame_label">WordGame: Scroggle</string>
    <string name="long_app_name">Ultimate TicTacToe</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="resume_label">Resume</string>
    <string name="about_text">\
        This game is played just like
        regular Tic Tac Toe with one difference: to win a tile
        you have to win a smaller game of Tic Tac Toe inside that tile.\n\
        \n\
        A tie happens when there are no further moves.
        In the case of a tie in a small board, that will count as a win for
        both sides in the larger game.
    </string>
    <string name="scroggle_ack">
        Thanks to Chenxi Zhao for giving suggestion on the algorithm. \n\
        Credit to Tencent Games for the Doudizhu background music.
    </string>
    <string name="wd_ins">
        This game has two phases. In the first 90 seconds, you have to select one word
        from each small board, total nine words. You have to finish one board before moving to others.
        The word has to have more than three letters.
        You need to click to submit your choice.\n\
        If you do not pick at least three words. The game will not enter Phase 2 due to lack of selection (Dialogue will pop up). \n\
        Otherwise when time is up, you will move to the next phase.
        In Phase #2, you will have another 90 seconds. You can only select one from each small board.Try to make as many words
        as you can within the time limit.\n\
        GREEN tiles are the available ones you can make a valid move.\n\
        RED tiles are frozen which you cannot make a valid move.\n\
        BLUE tiles shows the letters you already pick.\n\
        GREY tiles are the inactive ones which you have done with.\n\
        Enjoy the game!

    </string>

    <!--AnimalSudoku Strings-->
    <string name="as_name">Launch[Animal Sudoku]</string>
    <string name="as_progress_label">Progress</string>
    <string name="as_tutorial_label">How To Play</string>
    <string name="as_acknowledgement_label">Acknowledgement</string>
    <string name="as_about_label">About</string>
    <string name="as_about">\
        This game is the final project for CS5520 Summer 2018. \n\
        Team members: \n\
        Feng Wan Align_2016 \n\
        Ying Chen Align_2016 \n\
        Chen Liu Align_2017 \n\
    </string>
    <string name="as_ack">
        This game is inspired by Ying Chen.
        Illustrates and icons were made by Chen Liu.
        Game designed by Feng Wan.
    </string>
    <string name="as_ins">
        This game plays just as normal sudoku. Instead of filling the board with numbers, this game asks to fill with animal icons. \n\
        This orientation for this game is locked in landscape view. \n\
        1. Friends button is to register yourself to the database and add friends. You can use map sensor to add nearby users (on true android system, not emulator). You can also view everyone\'\s level on leaderboard.
        You can send congrat to any user and their device will receive icloud message. \n\
        2. Progress button: you have to play more games to unlock the in game features. The green color shows your current available features. You can unlock one animal of a theme after you finish one 4*4 game.
        Once you have all 9 animals available, you unlock the 9x9 game. After you finish 3 9x9 games, you can unlock next theme. \n\
        3. Cheat button is to allow you unlock all features for testing purpose.\n\
        4. New game button: you will be lead to a map screen. You can see three themes on the map. Activated theme is in full color and locked themes are in gray color. Once it is unlocked, it will automatically become full color. Under the button of each theme, you can select 4x4 or 9x9 games.
        When you select theme, the background of the activity will change and have the selected one highlighted. \n\
        5. In a 4x4 game or 9x9 game, you should select an animal from the left stock board to fill the game board at the center. Once stock selected, the color of the tile will turn blue. You can fill the game board with the selected animal. After you click on a tile, if the tile turn green, that means a valid move.
        However if it turns red, that means you should double check because same animal already exists in the same row,
        or in the same column or in the same small board. Revert button is to cancel the latest move.\n\
        6. Once the game board is all filled, it will calculate by itself that you win or not. If you don't win, nothing happens.
        If you win, there will be a notification saying you win, if you level up or not and any new feature is unlocked. \n\
    </string>
    <string name="zoo_label">Zoo</string>
    <string name="aquarium_label">Aqua Park</string>
    <string name="bird_habitat_label">Rainforest</string>

    <string name="easy_label">4 x 4</string>
    <string name="hard_label">9 x 9</string>
    <string name="new_game_title">Difficulty</string>

    <string name="revert_label">Revert</string>

    <string name="select_number_first_text">Please first select a number then fill in to a tile</string>
    <string name="no_move_text">You haven\'t made any move yet</string>
    <string name="finish_game_text">Congratulations! You just made it!</string>
    <string name="unlock_text">You unlocked new things!</string>

    <string name="back_to_main">Back to Main</string>
    <string name="play_again">Keep Playing</string>
    <string name="register">Register and share!</string>
    <string name="search_friends">Search and add friends</string>
    <string name="your_friends">Leaderboard</string>
    <string name="username_hint">Please enter username</string>
    <string name="register_to_game">Register to the game</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="nearby">Nearby users</string>
    <string name="congrats">Congrats</string>
    <string name="level">Level Up!  </string>



</resources>
