<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".AnimalSudoku.AS_SearchAddFriendsActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:background="@color/gray_color"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/search" />

        <Button
            android:id="@+id/nearby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:background="@color/gray_color"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/nearby" />


        <ListView
            android:id="@+id/user_listview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:scrollbars="vertical"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>



</FrameLayout>
