<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    tools:context=".AnimalSudoku.AS_FriendsActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sudoku_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/register"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:onClick="startRegister"
            android:background="@drawable/bt_blue"
            android:text="@string/register" />

        <Button
            android:id="@+id/search"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:onClick="startSearch"
            android:background="@drawable/bt_yellow"
            android:text="@string/search_friends" />

        <Button
            android:id="@+id/leaderboard"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:onClick="startLeaderboard"
            android:background="@drawable/bt_red"
            android:text="@string/your_friends" />
    </LinearLayout>

</FrameLayout>
